fixed mobile nav overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
 @layer components {
   .App {
-    @apply md:flex m-auto scroll-smooth
+    @apply flex m-auto scroll-smooth 
   }
   .dark {
     @apply bg-black text-white
@@ -15,7 +15,7 @@
     @apply opacity-80 flex gap-1 border-2 dark:border-white border-black p-3 rounded-lg hover:border-white hover:text-white hover:bg-black dark:hover:text-black dark:hover:bg-white 
   }
   .mobilenav {
-    @apply md:hidden h-[100vh] w-full z-[999] fixed top-0 left-0 bg-[#7d7979]/[.3] backdrop-blur-md shadow-[0_4px_30px_rgba(0,0,0,0.1)] overflow-y-hidden
+    @apply ease-in duration-500 lg:hidden h-[100vh] w-full z-[999] fixed top-0 left-0 bg-[#7d7979]/[.3] backdrop-blur-md shadow-[0_4px_30px_rgba(0,0,0,0.1)] overflow-y-hidden
   }
   .formelement {
     @apply p-6 bg-grey font-body rounded focus:outline-none dark:text-black
